# elm-street

./: .ghci  .travis.yml  CHANGELOG.md  README.md  elm-street.cabal  stack-8.4.4.yaml  stack-8.6.5.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
backend/: Api.hs  Main.hs
elm-example/: elm.json
elm-example/src/: Main.elm
elm-example/src/Core/: Decoder.elm  ElmStreet.elm  Encoder.elm  Types.elm
frontend/: elm.json  elmapp.config.js  package-lock.json  package.json
frontend/src/: Api.elm  Main.elm
frontend/src/Core/: Decoder.elm  ElmStreet.elm  Encoder.elm  Types.elm
frontend/tests/: Tests.elm
frontend/tests/Tests/: Golden.elm
generate-elm/: Main.hs
src/: Elm.hs  ElmStreet.hs  README.md
src/Elm/: Aeson.hs  Ast.hs  Generate.hs  Generic.hs  Print.hs
src/Elm/Print/: Common.hs  Decoder.hs  Encoder.hs  Types.hs
src/Internal/Prettyprinter/: Compat.hs
test/: Spec.hs
test/Test/: Golden.hs
test/golden/: oneType.json
types/: Types.hs
