cabal-version:       2.0
name:                elm-street
version:             0.0.0
synopsis:            Crossing the road between Haskell and Elm
description:         Crossing the road between Haskell and Elm
homepage:            https://github.com/Holmusk/elm-street
bug-reports:         https://github.com/Holmusk/elm-street/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Holmusk
maintainer:          tech@holmusk.com
copyright:           2019 Holmusk
category:            Language, Compiler, Elm
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/Holmusk/elm-street.git

library
  hs-source-dirs:      src
  exposed-modules:     Elm
                         Elm.Ast
                         Elm.Generate
                         Elm.Generic
                         Elm.Print

  build-depends:       base >= 4.11.1.0 && < 4.13
                     , directory ^>= 1.3
                     , filepath ^>= 1.4
                     , prettyprinter ^>= 1.2.1
                     , text ^>= 1.2

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

test-suite elm-street-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base >= 4.11.1.0 && < 4.13
                     , elm-street


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
